# radius-accounting-testbed

./: .gitignore  README.md  app.py  appcli.py  conftest.py  data_transfer.py  fr_changes.sh  generate_pcap.py  get_markers.py  main.py  pcap_extract.py  processes.py  pyproject.toml  raatest.py  requirements.txt  run_tests.py  test_demo.py
.devcontainer/: Dockerfile  devcontainer.json
pcaps/: test_ul_5gb.tcpdump.radius.pcap
provisioning/: 10-install_packages.sh  11-configure_system-pi.sh  11-configure_system.sh  12-configure_freeradius.sh  13-configure_freeradius-pi.sh  13-install_filebrowser.sh  14-install_filebrowser-pi.sh  filebrowser_install.sh  fr_changes.sh
raatestbed/: data_transfer.py  defaults.py  files.py  metadata.py  pcap_extract.py  processes.py  test.py  test_setup.py
raatests/: conftest.py  extra_funcs.py  pytest.ini  test_core.py  test_demo.py  test_or.py
src/: data_transfer.py  defaults.py  files.py  inputs.py  metadata.py  pcap_extract.py  processes.py  test_setup.py  testbed_setup.py
tests/: conftest.py  test_appcli.py  test_data_transfer.py  test_defaults.py  test_files.py  test_inputs.py  test_pcapextract.py  test_processes.py
tests/data/configs/: pytest.ini
tests/data/pcaps/: test_dl_5gb.tcpdump.radius.pcap
