[project]
name = "radius-accounting-testbed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.2",
    "psutil>=6.1.1",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "scapy>=2.6.1",
    "streamlit>=1.41.1",
]
